Created all views and controlers

--- a/GoPark2020/GoPark2020.csproj
+++ b/GoPark2020/GoPark2020.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ReserveSpotController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -239,9 +240,17 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\ReserveSpot\ConfirmAccount.cshtml" />
+    <Content Include="Views\ReserveSpot\Index.cshtml" />
+    <Content Include="Views\ReserveSpot\SignIn.cshtml" />
+    <Content Include="Views\ReserveSpot\SignUp.cshtml" />
+    <Content Include="Views\ReserveSpot\ReserveSpot.cshtml" />
+    <Content Include="Views\ReserveSpot\ConfirmSpot.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="bin\" />
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -255,6 +264,12 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GoParkDB2020\GoParkDB2020.csproj">
+      <Project>{0afb7c63-6e8b-4558-911c-ccdba662d229}</Project>
+      <Name>GoParkDB2020</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
