--- a/GoPark2020/GoPark2020.csproj
+++ b/GoPark2020/GoPark2020.csproj
@@ -220,6 +220,8 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\cars-parkinglot.jpg" />
+    <Content Include="Content\reservespot.css" />
     <Content Include="Content\SignIn.css" />
     <Content Include="Content\SignUp.css" />
     <Content Include="Content\site.css" />
